# rules_pico

./: .bazelrc  .gitignore  .gitlab-ci.yml  BUILD  README.md  WORKSPACE
examples/hello_world/: BUILD
pico/: BUILD  BUILD.pico-examples  BUILD.pico-sdk  BUILD.tinyusb  defs.bzl  pico-sdk.BUILD  repositories.bzl
pico/cmake/: CMakeLists.txt  config_autogen.cmake
pico/config/: BUILD
pico/private/: defs.bzl
toolchain/: BUILD  cc_toolchain_config.bzl  defs.bzl
toolchain/private/: BUILD.gcc-arm-embedded  cc_toolchain_config.bzl.tpl  defs.bzl  detect.py
